fix: Adjust padding for About Me on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -333,7 +333,7 @@ footer {
 
     .about-me-card {
         margin: 0;
-        padding: 0 20px;
+        padding: 0 20px 40px 20px;
     }
 
     .about-me-img-cont picture {
